--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="og:description" content="A pure client-side landing page template that you can freely fork, customize, host and link to your own domain name (e.g. using Github Pages). Relies on Mailchimp (for user email subscriptions) and Google Analytics (for stats)." property="og:description">
     <meta name="og:image" content="" property="og:image">
     <link rel="icon" href="favicon.ico">
-    <link type="text/css" rel="stylesheet" href="./res/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="./res/styles.css">
+    <link type="text/css" rel="stylesheet" href="res/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="res/styles.css">
   </head>
   <body>
     <div class="bg-image"></div>
@@ -26,21 +26,21 @@
                   <div class="user-signup__intro">
                     <h1 style="text-align: center;">Your free landing page</h1>
                     <p style="text-align: center;">
-                      <img src="./res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
+                      <img src="res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
                     <p style="text-align: center;">Would you like a free landing page like this one for your upcoming startup product?</p>
                     <p style="text-align: center;">
-                      <img src="./res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
+                      <img src="res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
                       <span style="font-size: 14px;">Enter your email address if you don't want to do it yourself:</span>
                     </p>
                   </div>
                 </div>
                 <div class="row">
-                  <form class="form form-horizontal user-signup__form" name="form" novalidate="" action=".//adrienjoly.us12.list-manage.com/subscribe/post?u=c1cfafd58fc9699f6d5a661e2&amp;id=a586ea22ee" method="POST">
+                  <form class="form form-horizontal user-signup__form" name="form" novalidate="" action="/adrienjoly.us12.list-manage.com/subscribe/post?u=c1cfafd58fc9699f6d5a661e2&amp;id=a586ea22ee" method="POST">
                     <div class="mt-table--full">
                       <div class="mt-td--centered-vertical user-signup__col-1">
                         <div class="user-signup__form-group m-lg-v form-group col-sm-12">
-                          <input type="email" name="EMAIL" class="form-control form-control__input user-signup__email" pattern="./^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" placeholder="Email" aria-required="true" required="required">
+                          <input type="email" name="EMAIL" class="form-control form-control__input user-signup__email" pattern="^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" placeholder="Email" aria-required="true" required="required">
                         </div>        
                       </div>
                       <div class="mt-td--centered-vertical user-signup__col-2">
