--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="og:image" content="" property="og:image">
     <link rel="icon" href="favicon.ico">
     <link type="text/css" rel="stylesheet" href="res/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="res/styles.css?relative">
+    <link type="text/css" rel="stylesheet" href="res/styles.css?new">
   </head>
   <body>
     <div class="bg-image"></div>
