ready for adrienjoly.com/eval

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="fr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Your free landing page</title>
-    <meta name="description" content="A pure client-side landing page template that you can freely fork, customize, host and link to your own domain name (e.g. using Github Pages). Relies on Mailchimp (for user email subscriptions) and Google Analytics (for stats)." property="description">
-    <meta name="keywords" content="landing page, free, product page, startup, github, template, boilerplate" property="keywords">
+    <title>Corriger le code de vos étudiants en 1 minute</title>
+    <meta name="description" content="Corriger le code de nos étudiants, c'est long et pénible. Et si un robot pouvait le faire à notre place ?" property="description">
+    <meta name="keywords" content="correction,copies,code,étudiants,éducation,automatique,automatisation,productivité,temps,évaluation,notation,exam,qcm,exercices,javascript" property="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1" property="viewport">
-    <meta name="og:title" content="Fork to get your free landing page" property="og:title">
-    <meta name="og:description" content="A pure client-side landing page template that you can freely fork, customize, host and link to your own domain name (e.g. using Github Pages). Relies on Mailchimp (for user email subscriptions) and Google Analytics (for stats)." property="og:description">
+    <meta name="og:title" content="Corriger le code de vos étudiants en 1 minute" property="og:title">
+    <meta name="og:description" content="Corriger le code de nos étudiants, c'est long et pénible. Et si un robot pouvait le faire à notre place ?" property="og:description">
     <meta name="og:image" content="" property="og:image">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="icon.png">
     <link type="text/css" rel="stylesheet" href="res/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="res/styles.css?new">
   </head>
@@ -24,19 +24,22 @@
               <div class="container-fluid rel">
                 <div class="row">
                   <div class="user-signup__intro">
-                    <h1 style="text-align: center;">Your free landing page</h1>
+                    <h1 style="text-align: center;">Corriger le code de vos étudiants en 1 minute</h1>
                     <p style="text-align: center;">
                       <img src="res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
-                    <p style="text-align: center;">Would you like a free landing page like this one for your upcoming startup product?</p>
+                    <p style="text-align: center;">Corriger le code de nos étudiants, c'est long et pénible. 😰</p>
+                    <p style="text-align: center;">Depuis 2 ans, un robot le fait pour moi. 🤖</p>
+                    <p style="text-align: center;">Vous voulez l'essayer ? 💯</p>
                     <p style="text-align: center;">
                       <img src="res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
-                      <span style="font-size: 14px;">Enter your email address if you don't want to do it yourself:</span>
+                      <span style="font-size: 14px;">Donnez-moi votre email pour que je vous envoie une invitation:</span>
                     </p>
                   </div>
                 </div>
+
                 <div class="row">
-                  <form class="form form-horizontal user-signup__form" name="form" novalidate="" action="/adrienjoly.us12.list-manage.com/subscribe/post?u=c1cfafd58fc9699f6d5a661e2&amp;id=a586ea22ee" method="POST">
+                  <form class="form form-horizontal user-signup__form" name="form" novalidate="" action="https://adrienjoly.us12.list-manage.com/subscribe/post?u=c1cfafd58fc9699f6d5a661e2&amp;id=bebda3bd3a" method="POST">
                     <div class="mt-table--full">
                       <div class="mt-td--centered-vertical user-signup__col-1">
                         <div class="user-signup__form-group m-lg-v form-group col-sm-12">
@@ -62,7 +65,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-1858235-15', 'auto');
+      ga('create', 'UA-1858235-4', 'auto');
       ga('send', 'pageview');
     </script>
   </body>
