--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <meta name="description" content="Corriger le code de nos étudiants, c'est long et pénible. Et si un robot pouvait le faire à notre place ?" property="description">
     <meta name="keywords" content="correction,copies,code,étudiants,éducation,automatique,automatisation,productivité,temps,évaluation,notation,exam,qcm,exercices,javascript" property="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1" property="viewport">
+
     <meta name="og:title" content="Corriger le code de vos étudiants en 1 minute" property="og:title">
     <meta name="og:description" content="Corriger le code de nos étudiants, c'est long et pénible. Et si un robot pouvait le faire à notre place ?" property="og:description">
-    <meta name="og:image" content="" property="og:image">
+    <meta name="og:image" content="https://adrienjoly.com/eval/res/screenshot.jpg" property="og:image">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@adrienjoly">
+    <meta name="twitter:creator" content="@adrienjoly">
+    <meta name="twitter:title" content="Corriger le code de vos étudiants en 1 minute">
+    <meta name="twitter:description" content="Corriger le code de nos étudiants, c'est long et pénible. Et si un robot pouvait le faire à notre place ?">
+    <meta name="twitter:image" content="https://adrienjoly.com/eval/res/screenshot.jpg">
+
     <link rel="icon" href="icon.png">
     <link type="text/css" rel="stylesheet" href="res/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="res/styles.css?2">
