désactivation de la mailing list => liens vers js-test et adrienjoly.com/teaching

--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
               <div class="container-fluid rel">
                 <div class="row">
                   <div class="user-signup__intro">
-                    <h1 style="text-align: center;">Corriger le code de vos étudiants en 1 minute</h1>
+                    <h1 style="text-align: center;">Corriger efficacement le code de vos étudiants</h1>
                     <p style="text-align: center;">
                       <img src="res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
                     <p style="text-align: center;">Corriger le code de nos étudiants, c'est long et pénible. 😰</p>
-                    <p style="text-align: center;">Depuis 2 ans, un robot le fait pour moi. 🤖</p>
-                    <p style="text-align: center;">Vous voulez l'essayer ? 💯</p>
+                    <p style="text-align: center;">Quelques liens pour vous aider: 💯</p>
+                    <!--
                     <p style="text-align: center;">
                       <img src="res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
                       <span style="font-size: 14px;">Donnez-moi votre email pour que je vous envoie une invitation:</span>
                     </p>
+                    -->
                   </div>
                 </div>
 
                 <div class="row">
+                  <!--
                   <form class="form form-horizontal user-signup__form" name="form" novalidate="" action="https://adrienjoly.us12.list-manage.com/subscribe/post?u=c1cfafd58fc9699f6d5a661e2&amp;id=bebda3bd3a" method="POST">
                     <div class="mt-table--full">
                       <div class="mt-td--centered-vertical user-signup__col-1">
@@ -66,6 +68,11 @@
                       </div>
                     </div>
                   </form>
+                  -->
+                  <ul style="text-align: center;">
+                    <li><a href="https://github.com/adrienjoly/js-test">JS-TEST, exerciseur / outils d'évaluation d'étudiants</a></li>
+                    <li><a href="https://adrienjoly.com/teaching/#assessment-tools-i-developed">Autres outils que j'ai développé pour évaluer mes étudiants</a></li>
+                  </ul>
                 </div>
               </div>
             </div>
